--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,41 @@
 page-contact {
 
 }
+
+
+img {
+	padding-top: 10px;
+	width: 100px;
+	height: 110px;
+}
+
+h1 {
+	font-family: roboto;
+	font-weight: bold;
+	font-size: 27.74px;
+	text-align: center;
+	color: #2980b9;
+}
+
+h2 {
+	font-family: roboto;
+	font-size: 14px;
+	text-align: center;
+	color: #606060;
+}
+
+h3 {
+	padding-top: -18px;
+	font-family: roboto;
+	font-size: 12px;
+	text-align: center;
+	color: #606060;
+}
+
+.version {
+	padding-top: 65px;
+	font-family: roboto;
+	font-size: 11px;
+	text-align: center;
+	color: #606060;
+}
